--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   appwrite: ^15.0.0
   cupertino_icons: ^1.0.8
+  file_picker: ^9.2.3
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
