--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   like_button: ^2.0.5
+  razorpay_flutter: ^1.4.0
   timeago: ^3.7.0
 
 dev_dependencies:
