--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   fpdart: ^1.1.1
   geocoding: ^3.0.0
   geolocator: ^13.0.3
+  google_generative_ai: ^0.4.6
   image_picker: ^1.1.2
   intl: ^0.19.0
   like_button: ^2.0.5
