--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   geocoding: ^3.0.0
   geolocator: ^13.0.3
   google_generative_ai: ^0.4.6
+  google_mlkit_text_recognition: ^0.15.0
   image_picker: ^1.1.2
   intl: ^0.19.0
   like_button: ^2.0.5
